--- a/src/pages/LoginPage.css
+++ b/src/pages/LoginPage.css
@@ -1,11 +1,8 @@
 .full_blue_bg {
+  /* background-image: linear-gradient(#0033A1,#000029); */
   background-image: linear-gradient(#0033A1,#000029);
   height: 100vh;
 }
-/* .main_row {
-  display: flex;
-  align-items: center;
-} */
 .main_column {
   background-color: #ffffff;
 }
@@ -18,10 +15,6 @@
 #login_btn{
   background-color: #0033A1;
   width: 100%;}
-/* .login_btn{
-  color: #0033A1;
-  width: 100%;
-} */
 #b_boarder_input{
   border-top: none;
   border-left: none;
@@ -40,12 +33,6 @@
   display: flex;
   justify-content: center;
 }
-.logo_img {
-  /* display: flex;
-  justify-items: center; */
-  /* justify-content: center; */
-  /* margin-left: 38%; */
-}
 
 .primary-header {
   color: #ffffff;
@@ -53,10 +40,7 @@
   justify-content: center;
   text-align: center;
 }
-/* .center_row {
-  margin-top: 30%;
 
-} */
 #f_p_link {
   font-size: small;
   color: #0033A1;
